--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -219,7 +219,7 @@ body{
         margin-top: 0.53125rem; 
         margin-right: 0.53125rem; 
         float: right; 
-        background-image: url('/images/delete.png'); 
+        background-image: url('../images/delete.png'); 
         background-size: 100% 100%;
 
 
@@ -352,7 +352,7 @@ body{
         border: none;  left: 87%; 
         width: 2.8125rem; height: 2.8125rem;
         background-color: transparent;
-        background-image: url('/images/circle.png');
+        background-image: url('../images/circle.png');
         background-position: center;  
         background-size: 100% 100%; 
         align-self: center; padding: 0;
