--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -37,6 +37,16 @@ body{
         display: none;
         visibility: hidden;
     }
+    .visuallyhidden{
+        border: 0;
+        clip: rect(0 0 0 0);
+        height: 1px;
+        margin: -1px;
+        overflow: hidden;
+        padding: 0;
+        position: absolute;
+        width: 1px;
+    }
     main{
         width: 100%; 
         height: calc(100% - 6.25rem); 
